// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Notification Banner Notification 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  height: auto;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": "1rem",
          "width": 1024,
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Show Notifications
              </span>
            </span>
          </button>
        </div>
      </div>
      <p
        style={
          Object {
            "paddingTop": "8px",
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Inline Notification 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  overflow: hidden;
  width: 100%;
  min-height: 2.875rem;
  border-radius: 0.25rem;
  color: #0f0f17;
  font-size: 0.875rem;
  border: 0.0625rem solid #d6f2dc;
  background: #f4faf5;
}

.emotion-3[notification-type='banner'] {
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem;
}

.emotion-5 {
  padding-right: 0.5rem;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #36C152;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-7 path {
  fill: #36C152;
}

.emotion-8 {
  padding: 1rem 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
  font-weight: 500;
}

.emotion-17 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-18 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  height: auto;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-18:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-18:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-18:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-18:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-20 {
  cursor: pointer;
  margin-left: 1rem;
}

.emotion-22 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-22 path {
  fill: #5f6c85;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "padding": "1rem",
              "width": 768,
            }
          }
        >
          <div
            className="emotion-3"
            data-testid="inline"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <span
                  className="emotion-6"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-7"
                  />
                </span>
              </div>
              <div
                className="emotion-8"
                data-testid="inline-message"
              >
                Informative Message
              </div>
            </div>
            <div
              className="emotion-9"
            />
          </div>
          <p
            style={
              Object {
                "paddingTop": "8px",
              }
            }
          >
            
          </p>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "padding": "1rem",
              "width": 768,
            }
          }
        >
          <div
            className="emotion-3"
            data-testid="inline"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <span
                  className="emotion-6"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-7"
                  />
                </span>
              </div>
              <div
                className="emotion-8"
                data-testid="inline-message"
              >
                Informative Message
              </div>
            </div>
            <div
              className="emotion-9"
            >
              <div
                className="emotion-17"
              >
                <button
                  className="emotion-18"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-19"
                  >
                    <span>
                      Action
                    </span>
                  </span>
                </button>
              </div>
              <span
                className="emotion-20"
                data-testid="notification-close"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-22"
                  />
                </span>
              </span>
            </div>
          </div>
          <p
            style={
              Object {
                "paddingTop": "8px",
              }
            }
          >
            
          </p>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "padding": "1rem",
              "width": 768,
            }
          }
        >
          <div
            className="emotion-3"
            data-testid="inline"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <span
                  className="emotion-6"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-7"
                  />
                </span>
              </div>
              <div
                className="emotion-8"
                data-testid="inline-message"
              >
                Informative Message
              </div>
            </div>
            <div
              className="emotion-9"
            >
              <div
                className="emotion-17"
              >
                <button
                  className="emotion-18"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-19"
                  >
                    <span>
                      Action
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <p
            style={
              Object {
                "paddingTop": "8px",
              }
            }
          >
            
          </p>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "padding": "1rem",
              "width": 768,
            }
          }
        >
          <div
            className="emotion-3"
            data-testid="inline"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <span
                  className="emotion-6"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-7"
                  />
                </span>
              </div>
              <div
                className="emotion-8"
                data-testid="inline-message"
              >
                Informative Message
              </div>
            </div>
            <div
              className="emotion-9"
            >
              <span
                className="emotion-20"
                data-testid="notification-close"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-22"
                  />
                </span>
              </span>
            </div>
          </div>
          <p
            style={
              Object {
                "paddingTop": "8px",
              }
            }
          >
            
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Playground 1 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  height: auto;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": "1rem",
          "width": 768,
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Show Notifications
              </span>
            </span>
          </button>
        </div>
      </div>
      <p
        style={
          Object {
            "paddingTop": "8px",
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Playground 2 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  height: auto;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": "1rem",
          "width": 768,
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Show Notifications
              </span>
            </span>
          </button>
        </div>
      </div>
      <p
        style={
          Object {
            "paddingTop": "8px",
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Playground 3 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  height: auto;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": "1rem",
          "width": 768,
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Show Notifications
              </span>
            </span>
          </button>
        </div>
      </div>
      <p
        style={
          Object {
            "paddingTop": "8px",
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Snackbar Notification 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  height: auto;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": "1rem",
          "width": 768,
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Show Notifications
              </span>
            </span>
          </button>
        </div>
      </div>
      <p
        style={
          Object {
            "paddingTop": "8px",
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Toast Notification 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  height: auto;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": "1rem",
          "width": 768,
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Show Notifications
              </span>
            </span>
          </button>
        </div>
      </div>
      <p
        style={
          Object {
            "paddingTop": "8px",
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;
